--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^6.5.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   equatable: ^2.0.7
@@ -36,8 +37,15 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  flutter_sound: ^9.28.0
+  image_picker: ^1.1.2
   intl: ^0.19.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  record: ^6.0.0
+  socket_io_client: ^3.1.2
   supabase_flutter: ^2.9.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
