--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,17 +32,24 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   equatable: ^2.0.7
+  firebase_auth: ^6.0.0
+  firebase_core: ^4.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   flutter_sound: ^9.28.0
+  fluttertoast: ^8.2.12
+  go_router: ^16.0.0
+  google_fonts: ^6.2.1
   image_picker: ^1.1.2
   intl: ^0.19.0
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   record: ^6.0.0
+  shared_preferences: ^2.5.3
+  sizer: ^3.0.5
   socket_io_client: ^3.1.2
   supabase_flutter: ^2.9.1
   uuid: ^4.5.1
