--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audio_session: ^0.2.2
   audioplayers: ^6.5.0
+  cloud_firestore: ^6.0.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   equatable: ^2.0.7
@@ -45,6 +47,7 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   intl: ^0.19.0
+  just_audio: ^0.10.4
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   record: ^6.0.0
@@ -69,8 +72,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/logo.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
