--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   audio_session: ^0.2.2
   audioplayers: ^6.5.0
+  cached_network_image: ^3.4.1
   cloud_firestore: ^6.0.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
@@ -45,6 +46,7 @@ dependencies:
   fluttertoast: ^8.2.12
   go_router: ^16.0.0
   google_fonts: ^6.2.1
+  http: ^1.4.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   just_audio: ^0.10.4
